Parser/errors/pth.txt
checking for fort... no
checking for xlf95... no
checking for ifc... no
checking for efc... no
checking for pgf95... no
checking for lf95... no
checking for gfortran... no
checking whether we are using the GNU Fortran 77 compiler... no
checking whether  accepts -g... no
checking the maximum length of command line arguments... 32768
checking command to parse /usr/bin/nm -B output from x86_64-alt-linux-gcc object... failed
checking for objdir... .libs
checking for x86_64-alt-linux-ar... no
checking for ar... ar
checking for x86_64-alt-linux-ranlib... no
checking for ranlib... ranlib
checking for ranlib... ranlib
checking for x86_64-alt-linux-strip... no
checking for x86_64-alt-linux-strip... no
checking for strip... strip
checking for strip... strip
checking if x86_64-alt-linux-gcc supports -fno-rtti -fno-exceptions... no
checking if x86_64-alt-linux-gcc supports -fno-rtti -fno-exceptions... no
checking for x86_64-alt-linux-gcc option to produce PIC... -fPIC
checking for x86_64-alt-linux-gcc option to produce PIC... -fPIC
checking if x86_64-alt-linux-gcc PIC flag -fPIC works... yes
checking if x86_64-alt-linux-gcc PIC flag -fPIC works... yes
checking if x86_64-alt-linux-gcc static flag -static works... no
checking if x86_64-alt-linux-gcc supports -c -o file.o... yes
checking whether the x86_64-alt-linux-gcc linker (/usr/bin/ld -m elf_x86_64) supports shared libraries... yes
checking whether -lc should be explicitly linked in... no
checking dynamic linker characteristics... cat: '/etc/ld.so.conf.d/*.conf': No such file or directory
GNU/Linux ld.so
checking how to hardcode library paths into programs... immediate
checking whether stripping libraries is possible... yes
checking if libtool supports shared libraries... yes
checking whether to build shared libraries... yes
checking whether to build static libraries... no
configure: creating libtool
appending configuration tag "CXX" to libtool
appending configuration tag "F77" to libtool

      |                ^
pth_syscall.c:79:22: note: in definition of macro 'pth_sc'
pth_syscall.c:79:22: note: in definition of macro 'pth_sc'
   79 | /* no hard syscall mapping */
   79 | /* no hard syscall mapping */
      |                      ^~~~
      |                      ^~~~
      |                      ^~~~
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_ring.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_ring.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_ring.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_pqueue.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_pqueue.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_pqueue.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_pqueue.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_time.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_time.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_time.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_time.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_errno.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_errno.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_errno.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_errno.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_mctx.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_mctx.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_mctx.c
./libtool --mode=compile --quiet x86_64-alt-linux-gcc -c -I. -pipe -frecord-gcc-switches -Wall -O2 -flto=auto pth_mctx.c
pth_mctx.c: In function '__pth_mctx_set':
pth_mctx.c: In function '__pth_mctx_set':
pth_mctx.c: In function '__pth_mctx_set':
pth_mctx.c: In function '__pth_mctx_set':
pth_mctx.c:480:2: error: #error "Unsupported Linux (g)libc version and/or platform"
pth_mctx.c:480:2: error: #error "Unsupported Linux (g)libc version and/or platform"
pth_mctx.c:480:2: error: #error "Unsupported Linux (g)libc version and/or platform"
pth_mctx.c:480:2: error: #error "Unsupported Linux (g)libc version and/or platform"
  480 | #error "Unsupported Linux (g)libc version and/or platform"
  480 | #error "Unsupported Linux (g)libc version and/or platform"
  480 | #error "Unsupported Linux (g)libc version and/or platform"
  480 | #error "Unsupported Linux (g)libc version and/or platform"
      |  ^~~~~
      |  ^~~~~
      |  ^~~~~
      |  ^~~~~
make: *** [Makefile:155: pth_mctx.lo] Error 1
make: *** [Makefile:155: pth_mctx.lo] Error 1
make: *** [Makefile:155: pth_mctx.lo] Error 1
make: *** [Makefile:155: pth_mctx.lo] Error 1
make: *** [Makefile:155: pth_mctx.lo] Error 1
make: Leaving directory '/usr/src/RPM/BUILD/pth-2.0.7'
make: Leaving directory '/usr/src/RPM/BUILD/pth-2.0.7'
make: Leaving directory '/usr/src/RPM/BUILD/pth-2.0.7'
make: Leaving directory '/usr/src/RPM/BUILD/pth-2.0.7'
make: Leaving directory '/usr/src/RPM/BUILD/pth-2.0.7'
error: Bad exit status from /usr/src/tmp/rpm-tmp.81727 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.81727 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.81727 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.81727 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.81727 (%build)










RPM build errors:
RPM build errors:
RPM build errors:
RPM build errors:
RPM build errors:
    Bad exit status from /usr/src/tmp/rpm-tmp.81727 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.81727 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.81727 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.81727 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.81727 (%build)
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
3.49user 4.66system 0:07.32elapsed 111%CPU (0avgtext+0avgdata 25112maxresident)k
3.49user 4.66system 0:07.32elapsed 111%CPU (0avgtext+0avgdata 25112maxresident)k
3.49user 4.66system 0:07.32elapsed 111%CPU (0avgtext+0avgdata 25112maxresident)k
3.49user 4.66system 0:07.32elapsed 111%CPU (0avgtext+0avgdata 25112maxresident)k
0inputs+0outputs (0major+1169809minor)pagefaults 0swaps
0inputs+0outputs (0major+1169809minor)pagefaults 0swaps
0inputs+0outputs (0major+1169809minor)pagefaults 0swaps
hsh-rebuild: rebuild of `pth-2.0.7-alt6.src.rpm' failed.
hsh-rebuild: rebuild of `pth-2.0.7-alt6.src.rpm' failed.
hsh-rebuild: rebuild of `pth-2.0.7-alt6.src.rpm' failed.
Command exited with non-zero status 1
Command exited with non-zero status 1
0.65user 1.52system 0:11.32elapsed 19%CPU (0avgtext+0avgdata 11576maxresident)k
0.65user 1.52system 0:11.32elapsed 19%CPU (0avgtext+0avgdata 11576maxresident)k
0inputs+0outputs (0major+84776minor)pagefaults 0swaps
